--- a/src/components/about/team/team.css
+++ b/src/components/about/team/team.css
@@ -3,6 +3,7 @@
     gap: 19px;
     flex-wrap: wrap;
     padding-bottom: 80px;
+    padding-top: 21px;
 
 }
 
